smells e bugs corrigidos